adapt planning information and teams sessions

--- a/blog/2025-03-20-release-planning-R25.09.mdx
+++ b/blog/2025-03-20-release-planning-R25.09.mdx
@@ -36,9 +36,9 @@ We look forward to seeing you there and working together to make R25.09 a succes
 
 The first Refinement Day sets the foundation for R25.09. Expert groups will brainstorm, refine features, and identify key dependencies for roadmap alignment.
 
-- **Date:** Wednesday, 04th April 2025
+- **Date:** Wednesday, 09th April 2025
 - **Time:** 09:05 - 12:00
-- **Main Teams Link:** [Join the session](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ODVmYWM1OGYtNjdkYS00ODgxLWI1YWEtMjAwZGJjY2NjNGIw%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
+- **Main Teams Link:** [Join the session](https://teams.microsoft.com/l/meetup-join/19%3ameeting_MzU2MzUxZmItZWYxMy00YWI5LThiZmUtZTVmYzhkMTZlMzk3%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
 
 ### Agenda
 
@@ -49,52 +49,14 @@ The first Refinement Day sets the foundation for R25.09. Expert groups will brai
 
 ### Sessions
 
-#### Reference Implementations
+:::note
 
-- [bpdm (business partner data management)](https://teams.microsoft.com/l/meetup-join/19%3ameeting_OGE1NjVjOGQtNjZkMi00OTcyLTlhNTAtZjU2NzAxMzdiNmRm%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [bdrs (bpn-did-resolution-service)](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NzBlZTQwZTQtNjdlNS00NDY0LThhMDEtNDQ4NjFlMGQ4NzBj%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [dpp (digital-product-pass)](https://teams.microsoft.com/l/meetup-join/19%3ameeting_MGIzNmYzZjYtODUwMC00MWQ1LWE0NTItODQwNjg2OWE2ZDU4%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [industry-core-hub](https://teams.microsoft.com/l/meetup-join/19%3ameeting_MWU3OWRlNzUtOWNhYy00MmU0LWJjMTItMzIxYzgzNGUzMGQ5%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [irs (item-relationship-service)](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZWE3YTg5MjEtNWFhMi00MmM1LTgwNDctYWY2NTVjMmJhNzIw%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [ka (knowledge-agents)](https://teams.microsoft.com/l/meetup-join/19%3ameeting_YzAyNWNjNjMtNGVjZC00MTg0LWIyZDktOGQ4MTMzMWRiMGRk%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [mso (managed-service-orchestrator)](https://teams.microsoft.com/l/meetup-join/19%3ameeting_YTg4NmVlYzYtMzRjYS00NDZhLTk5ZGQtZDVjMTY3YmRiY2Vm%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [sde (managed-simple-data-excahnger)](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NzEyYmQyYjEtMDNhNS00ZjAwLWI3MjEtNzgyOWUwZGEyYjQ4%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- policy-hub (please join [portal session](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZTViMzY4NmYtNDk1My00OTlkLWI5MzAtM2NiNWVmNGI0MjUw%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d) due to overlapping committers)
-- [portal](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZTViMzY4NmYtNDk1My00OTlkLWI5MzAtM2NiNWVmNGI0MjUw%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [puris (predictive-unit-real-time-information-service)](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NTI1NGYzYWUtNjEyYi00NmE2LTg4ZjUtOWYzYjJiZjY1MDI1%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [sd-factory](https://teams.microsoft.com/l/meetup-join/19%3ameeting_OWRmYmE5YWYtOGNkOC00NjdkLTgxYzEtMWE1YWJhNjE3Yjg0%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [sldt (semantic-layer-and-digital-twin-registry) incl. modelling, discovery finder, registry](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NmZjOTUwMjItNTRkNC00ZWVlLWE2YTEtMDUwYzZkYjRlOWZk%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- ssi-authority-schema-registry (please join [portal session](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZTViMzY4NmYtNDk1My00OTlkLWI5MzAtM2NiNWVmNGI0MjUw%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d) due to overlapping committers)
-- ssi-credential-issuer (please join [portal session](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZTViMzY4NmYtNDk1My00OTlkLWI5MzAtM2NiNWVmNGI0MjUw%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d) due to overlapping committers)
-- [ssi-dim-wallet-stub](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZDczOWVlOWUtMDdiYi00NjdkLWJkMDktZTY4ZGM1Zjk5MmRk%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [traceability-foss](https://teams.microsoft.com/l/meetup-join/19%3ameeting_OTk2NmNmOWUtY2EzNS00OGE2LWE5NzUtZDk3ZDFkOGFjMjZl%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [tractus-x-umbrella](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NjIwNzFhODEtYmYwZS00ZmI0LWFhNDgtZTg0YTg1MTcyNzFj%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [tractusx-edc](https://teams.microsoft.com/l/meetup-join/19%3ameeting_MjRkNmZiNjAtNGZiNi00NGQ2LTkzOGQtOWE4MzhkMDdhYzU2%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [identity-hub](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZWQxMDc2NjctMjM4MC00NWEyLWExNTAtZGViM2UwNzc0Y2Ux%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
+Links to the teams sessions for each group will be provided soon. PLease also have a look in the [Release Management](https://matrix.to/#/#tractusx-release-planning:matrix.eclipse.org) channel and on the
+[tractusx-dev](https://accounts.eclipse.org/mailing-list/tractusx-dev) mailing list.
 
-#### KITs
+The sessions are used for refinement day 1 and 2.
 
-- [Agents](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NDlhZDdjM2YtNzgwOC00YTI5LTg0ZTctOWFjNGVkMjIxMTZm%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Behaviour Twin](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZmRlMTU1OGItYzMwMy00NTc5LTg4M2QtNmRhYmRkMDgzZjhl%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Business Partner](https://teams.microsoft.com/l/meetup-join/19%3ameeting_YjIzM2MyMWEtMmNkMi00NTU3LWFlMmQtMDFiYjAxYmUxNzk0%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Circularity](https://teams.microsoft.com/l/meetup-join/19%3ameeting_YzY2YmI5NjAtODcwOS00YzY5LWFmMWYtYTc0YTI5MWExNDNk%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Connector](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NjlhNzViZGMtMGEzMi00NmI5LWFkYjAtNTE0MDUzM2VmMDgx%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Data Chain](https://teams.microsoft.com/l/meetup-join/19%3ameeting_MWQyYmQwYjQtNTllNi00ZjkyLWEzNGQtMDFiNWJkMTcxYmM5%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Data Governance](https://teams.microsoft.com/l/meetup-join/19%3ameeting_Y2U1Zjg0ZWItZTQyNy00YTc5LTg4NjctMzhlNWQyNGYyMzgy%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Demand and Capacity Management](https://teams.microsoft.com/l/meetup-join/19%3ameeting_OGVlOGUwNmUtMGVkNi00NWZiLWI1MGItN2ZlOTg1OTk4ZGQ5%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Digital Twin](https://teams.microsoft.com/l/meetup-join/19%3ameeting_YWFlNmZkNzAtMTJhNC00YTA1LWE5ZTEtOTQyNWZlODY0ZTYw%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Eco Pass](https://teams.microsoft.com/l/meetup-join/19%3ameeting_OTIyNmIwODUtNDhjNi00YzgwLTljMTktMzJhN2MwNDY2MmFh%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Environmental Social Standards](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NDc1ZDNhNmEtNWU5Yy00ZjM0LWJmYTgtOTQyMjIwMjdkZGIx%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Industry Core](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZTU4MDYyM2ItNTg1MS00ZDk4LTk4ZjYtZTlkZWY0MTU5MDE4%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Model Based Development](https://teams.microsoft.com/l/meetup-join/19%3ameeting_N2Y0NTgwYmItMDNhNC00MzBiLTk5MWMtMjUzMTUyYTM4ZWQ2%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Modular Production](https://teams.microsoft.com/l/meetup-join/19%3ameeting_YzhkNzcxYzctZmI4ZS00NmI1LTg4YWUtMzk2NGFlNzVjOGU1%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Online Simulation](https://teams.microsoft.com/l/meetup-join/19%3ameeting_YzlhNTJiNDQtYzkzZi00M2ZmLThkMDYtMzBlZmQxNDY0OTU1%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Manufacturing as a Service](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZmYwYmVlNjMtY2U0ZC00YmZiLWIwY2YtYzg0NjM3MmRkY2Vm%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [PURIS](https://teams.microsoft.com/l/meetup-join/19%3ameeting_M2U3NjE1OTMtMmZmMS00YTBkLWJjZDktN2YzN2ZiZGFlZjcz%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Supply Chain Disruption Notifications](https://teams.microsoft.com/l/meetup-join/19%3ameeting_MDUyOTI1MWYtOWYxZS00YzkyLWJmZGMtZmY1NjNjYmM4MjJj%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [PCF Exchange](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NGI3MjYwNDAtZjQ4My00YTIxLTlhOTItZmI4YmJjYWI3NmRm%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Quality](https://teams.microsoft.com/l/meetup-join/19%3ameeting_MmNiM2I1NmMtOGNmOS00ZmNhLTlhMGYtMjI1YjI1ZjIzYjc5%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
-- [Traceability](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZmQ2YWNhMWUtMTg0NS00NGM1LThiZmUtOTc4M2UxOTFkMzcx%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
+:::
 
 ### Preparation Checklist
 
@@ -116,17 +78,13 @@ You’re encouraged to collaborate across groups as needed, and we’ll provide 
 The sessions for the different groups / components / dependencies can be used to sync within the underlying expert groups. Feel free to switch between groups if necessary!
 :::
 
-- [Breakout 1](#placeholder-link-1)
-- [Breakout 2](#placeholder-link-2)
-- [Breakout 3](#placeholder-link-3)
-
 ## Refinement Day 2 for R25.09
 
 The second Refinement Day focuses on resolving **dependencies** identified during Refinement Day 1. Groups will refine their features further, ensuring alignment across components.
 
 - **Date:** Wednesday, 30th April 2025
 - **Time:** 09:05 - 12:00
-- **Main Teams Link:** [Join the session](https://teams.microsoft.com/l/meetup-join/19%3ameeting_MWVjNTkwNTEtYTFiZS00ODI5LWE4MTgtMzE5MWM2ZGIwMzgw%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
+- **Main Teams Link:** [Join the session](https://teams.microsoft.com/l/meetup-join/19%3ameeting_YzhlNTU3ZTYtYTA4Ni00NWFhLTgxMDMtMWFmYTRkYmVkZWNj%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
 
 ### Agenda
 
@@ -148,7 +106,7 @@ The second Refinement Day focuses on resolving **dependencies** identified durin
 During the refinement sessions, each group will focus on resolving **identified dependencies** from Refinement Day 1, which are visible via the **related labels** on the features.
 While further feature refinement is allowed, the emphasis is on addressing and coordinating **dependencies** between groups and components.
 
-Our working Board for the day is the [Release Planning - R25.09 - Preparation](https://github.com/orgs/eclipse-tractusx/projects/26/views/36)
+Our working Board for the day is the [Release Planning - R25.09 - Preparation](https://github.com/orgs/eclipse-tractusx/projects/26/views/40)
 
 You’re encouraged to collaborate across groups as needed, and we’ll provide **Teams sessions** (we will use the same sessions from Refinement Day 1) for each group to work in.
 It might be the case for some experts to jump into different other groups to resolve dependencies.
@@ -157,21 +115,13 @@ It might be the case for some experts to jump into different other groups to res
 The sessions for the different groups / components / dependencies can be used to sync within the underlying expert groups. Feel free to switch between groups if necessary!
 :::
 
-- [Breakout 1](#placeholder-link-1)
-- [Breakout 2](#placeholder-link-2)
-- [Breakout 3](#placeholder-link-3)
-
-#### Dependency session for SSI
-
-From **10:15 - 11:15** dependencies between the portal, identity-hub and ssi-credential-issuer in regards to Self Sovereign Identity (SSI) (see [issues](https://github.com/orgs/eclipse-tractusx/projects/26/views/36?sliceBy%5Bvalue%5D=NSC+-+SSI)) are clarified in the [portal session](https://teams.microsoft.com/l/meetup-join/19%3ameeting_ZTViMzY4NmYtNDk1My00OTlkLWI5MzAtM2NiNWVmNGI0MjUw%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d).
-
 ## Open Planning for R25.09
 
 The Open Planning session finalizes the roadmap for R25.09, prioritizing features and aligning all participants on deliverables for the release.
 
 - **Date:** Wednesday, 7th May 2025
 - **Time:** 09:05 - 17:00
-- **Teams Link:** [Join the session](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NGRkMWIxOTctYTg3ZC00MWExLTk5NjYtMjBjZjYzYWFmZDMx%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d)
+- **Teams Link:** [Join the session](https://teams.microsoft.com/l/meetup-join/19%3ameeting_NjkzMmM3ZmYtNTA4Zi00MGIyLTk0YWYtODg2OWM1N2E2YTg0%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%225365a192-079b-4140-947d-d47db343e981%22%7d)
 
 **Who Should Attend**:
 - Contributors and Committers from the open-source community
