--- a/blog/2025-05-22-fourth-community-days.mdx
+++ b/blog/2025-05-22-fourth-community-days.mdx
@@ -41,7 +41,8 @@ expanded range of workshops, challenges and opportunities to collaborate on shap
 #### Agenda
 
 :::info
-Will follow soon
+The agenda for both days is available [here](https://arena2036.de/files/FinaleBilder/05_Veranstaltungen/ARENA-X/Fourth_Eclipse_Tractus-X_Community_Days/CDs_AGENDA.pdf) and more information about the different
+challenges are available in the [wiki](https://cxwiki.bonnconsulting.io/en/tractus-x-community-days/overview) -> no login needed!
 :::
 
 ### Be Part of the Future
