Adaptations for sections 2.1 and distinction between code coverage reporting and code coverage analysis itself, and additional references and clarifications.

--- a/docs/release/trg-10/trg-10-01.md
+++ b/docs/release/trg-10/trg-10-01.md
@@ -21,7 +21,7 @@ This guideline applies to all software components and projects that are part of 
 1.1. **Code Coverage Threshold**
 
 - Quality Gate: The minimum threshold for code coverage (line coverage) should be **80.0%**.
-- This applies to both unit tests and integration tests.
+- The code coverage is calculated using both unit tests and integration tests combined.
 - Every project not specifically associated to a different Quality Gate will be associated to this one by default.
 
 1.2. **Exceptions**
@@ -36,14 +36,16 @@ Certain code sections may be excluded from counting towards the code coverage pe
 - Are code for logging, metrics, or monitoring.
 - Depend on platform-specifics, for example hardware that cannot be simulated in a test.
 
-All exceptions should be documented and approved by the project's committer.
+All exceptions should be documented and approved by the project's lead/main committers.
 
 ### 2. Analysis and Reporting
 
-2.1. **Tools for Code Coverage Measurement**
+2.1. **Tools for Code Coverage Reporting**
 
-- Recommended: **SonarQube Cloud** as provided by Elipse Tractus-X. [Reference link](https://sonarcloud.io/organizations/eclipse-tractusx/projects)
-- The tool used to track code coverage should be specified and documented within the respective project.
+- The recommended code coverage reporting tool is **SonarQube Cloud** as provided by Elipse Tractus-X. [Reference link](https://sonarcloud.io/organizations/eclipse-tractusx/projects)
+- Please note that SonarQube Cloud does not calculate the code coverage itself. To include coverage results you must set up a third-party coverage analysis tool and configure SonarQube Cloud to import the analysis results produced by that tool.
+- SonarQube Cloud supports the import of coverage data in formats native to a variety of tools for a variety of languages. It also provides a possibility to import a generic format from tools that are not directly supported. See the guideline in section [4. Resources and Examples](#sonarqube-implementation-guides) as reference on how to implement this.
+- The tool or tools used for test coverage analysis and to produce the code coverage report should be specified and documented within the respective Eclipse Tractus-X project.
 
 2.2. **Regular Review**
 
@@ -59,13 +61,17 @@ All exceptions should be documented and approved by the project's committer.
 
 3.2. **Risk Analysis**
 
-- If the code coverage value falls below 80.0%, the potential risks should be documented and approved by the release management team.
+- If the code coverage value for an Eclipse Tractus-X project falls below 80.0% for an (upcoming) release and this cannot be improved anymore in time before the release, this potential risk should be documented and approved by the project lead/main committers.
 
-### 4. Examples and Resources
+### 4. Resources and Examples
+<a id="sonarqube-implementation-guides"></a>
+#### 4.1 **SonarQube Cloud Implementation Guides**
 
-#### 4.1. **Code Examples**
+See the following SonarQube Cloud guideline for the importing of test coverage reports with detailed guides for several popular programming languages as [reference](https://docs.sonarsource.com/sonarqube-cloud/enriching/test-coverage/overview/).
 
-An example of a GitHub workflow integration can be found below.
+#### 4.2. **GitHub Workflow Integration Code Example**
+
+An example of a GitHub workflow integration using Java and Apache Maven can be found below.
 
 ```yaml
 name: "Run unit and integration tests"
