Corrected Markdown, removed statement on Quality Gate profiles (default setting and thus does not need to be icluded in TRG)

--- a/docs/release/trg-10/trg-10-01.md
+++ b/docs/release/trg-10/trg-10-01.md
@@ -6,7 +6,8 @@ sidebar_position: 1
 | Status | Created     | Post-History            |
 |--------|-------------|-------------------------|
 | Draft  | 07-Feb-2025 | Initial version created |
-| Draft  | 21-Mar-2025 | Update with example integration for Java |
+| Draft  | 21-Mar-2025 | Update with example integration for GitHub Workflow |
+| Draft  | 24-Mar-2025 | Update with SonarQube Cloud reference implementation and clarifications|
 
 ## Why
 
@@ -22,7 +23,6 @@ This guideline applies to all software components and projects that are part of 
 
 - Quality Gate: The minimum threshold for code coverage (line coverage) should be **80.0%**.
 - The code coverage is calculated using both unit tests and integration tests combined.
-- Every project not specifically associated to a different Quality Gate will be associated to this one by default.
 
 1.2. **Exceptions**
 
@@ -42,7 +42,7 @@ All exceptions should be documented and approved by the project's lead/main comm
 
 2.1. **Tools for Code Coverage Reporting**
 
-- The recommended code coverage reporting tool is **SonarQube Cloud** as provided by Elipse Tractus-X. [Reference link](https://sonarcloud.io/organizations/eclipse-tractusx/projects)
+- The recommended code coverage reporting tool is **SonarQube Cloud** as provided by Elipse Tractus-X at this [reference link](https://sonarcloud.io/organizations/eclipse-tractusx/projects).
 - Please note that SonarQube Cloud does not calculate the code coverage itself. To include coverage results you must set up a third-party coverage analysis tool and configure SonarQube Cloud to import the analysis results produced by that tool.
 - SonarQube Cloud supports the import of coverage data in formats native to a variety of tools for a variety of languages. It also provides a possibility to import a generic format from tools that are not directly supported. See the guideline in section [4. Resources and Examples](#sonarqube-implementation-guides) as reference on how to implement this.
 - The tool or tools used for test coverage analysis and to produce the code coverage report should be specified and documented within the respective Eclipse Tractus-X project.
@@ -64,7 +64,9 @@ All exceptions should be documented and approved by the project's lead/main comm
 - If the code coverage value for an Eclipse Tractus-X project falls below 80.0% for an (upcoming) release and this cannot be improved anymore in time before the release, this potential risk should be documented and approved by the project lead/main committers.
 
 ### 4. Resources and Examples
+
 <a id="sonarqube-implementation-guides"></a>
+
 #### 4.1 **SonarQube Cloud Implementation Guides**
 
 See the following SonarQube Cloud guideline for the importing of test coverage reports with detailed guides for several popular programming languages as [reference](https://docs.sonarsource.com/sonarqube-cloud/enriching/test-coverage/overview/).
