--- a/docs/release/trg-1/trg-1-09.md
+++ b/docs/release/trg-1/trg-1-09.md
@@ -19,7 +19,7 @@ Those changes aren't obvious just based on a changelog ([TRG 1.03](https://eclip
 
 ## Description
 
-A migration guide **must** contain all relevant information for operators of a component to migrate an existing component from the previous to the new version.
+A migration guide **must** contain all relevant information for operators of a component to migrate an existing component from the previous to the new version. It must be placed in a directory named `/docs/architecture'.
 
 It **must** also contain all relevant changes for users, such as changed API calls, component behaviour, added/deprecated customer facing features etc.
 
