--- a/docs/release/trg-1/trg-1-09.md
+++ b/docs/release/trg-1/trg-1-09.md
@@ -4,7 +4,7 @@ sidebar_position: 1
 ---
 
 :::caution
-Proposed release date: "mandatory after": 19th of May 2023
+Proposed release date: "mandatory after": tbd
 :::
 
 | Status     | Created      | Post-History                           |
