docs(portal-meeting): change day&time

--- a/community/open-meetings.mdx
+++ b/community/open-meetings.mdx
@@ -82,13 +82,14 @@ All the times are shown in:
 />
 
 <MeetingInfo title="Portal - Open Meeting"
-             schedule="Every Thursday from 01:30 pm to 02:00 pm (canceled on Dec 26, 2024 and Jan 2, 2025 due to holiday)"
-             description="Coordination of feature refinement and development for portal product."
-             contact="erik.wiegert@cofinity-x.com"
+             schedule="Every Tuesday from 10:30 am to 11:00 am"
+             description="Open meeting for Portal product. Agenda is divided in alignment on development - features, bugs, maintenance - and Q&A."
+             contact="tdb"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_YmIyYjgwOTQtZjI1Ny00YmM0LTlmOWQtODRjZWFmZWM1Y2E3%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d"
              additionalLinks={
                 [
                     {title: 'Portal Matrix Chat', url: 'https://chat.eclipse.org/#/room/#tractusx-portal:matrix.eclipse.org'},
+                    {title: 'Feature Board', url: 'https://github.com/orgs/eclipse-tractusx/projects/50/views/25'},
                 ]
              }
 />
