--- a/community/open-meetings.mdx
+++ b/community/open-meetings.mdx
@@ -84,7 +84,7 @@ All the times are shown in:
 <MeetingInfo title="Portal - Open Meeting"
              schedule="Every Tuesday from 10:30 am to 11:00 am"
              description="Open meeting for Portal product. Agenda is divided in alignment on development - features, bugs, maintenance - and Q&A."
-             contact="tdb"
+             contact="saad.rafiq@cofinity-x.com"
              sessionLink="https://teams.microsoft.com/l/meetup-join/19%3ameeting_YmIyYjgwOTQtZjI1Ny00YmM0LTlmOWQtODRjZWFmZWM1Y2E3%40thread.v2/0?context=%7b%22Tid%22%3a%221ad22c6d-2f08-4f05-a0ba-e17f6ce88380%22%2c%22Oid%22%3a%22a8b7a5ee-66ff-4695-afa2-08f893d8aaf6%22%7d"
              additionalLinks={
                 [
