--- a/docs/release/trg-10/trg-10-01.md
+++ b/docs/release/trg-10/trg-10-01.md
@@ -8,6 +8,7 @@ sidebar_position: 1
 | Draft  | 07-Feb-2025 | Initial version created |
 | Draft  | 21-Mar-2025 | Update with example integration for GitHub Workflow |
 | Draft  | 24-Mar-2025 | Update with SonarQube Cloud reference implementation and clarifications|
+| Draft  | 02-Apr-2025 | Updated workflow integration example |
 
 ## Why
 
@@ -76,7 +77,7 @@ See the following SonarQube Cloud guideline for the importing of test coverage r
 An example of a GitHub workflow integration using Java and Apache Maven can be found below.
 
 ```yaml
-name: "Run unit and integration tests"
+name: "Sonar Check"
 
 on:
   pull_request:
@@ -105,19 +106,25 @@ jobs:
 
       - name: Run unit & integration tests
         run: |
-          mvn -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn -B verify
+          mvn -B verify 
 
-      - name: Publish integration test results
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        if: always()
-        with:
-          files: "${{ github.workspace }}/target/failsafe-reports/integration-tests.xml"
-          check_name: "Integration Test Results"
+      - name: Clean working directories
+        run: |
+          rm -rf .scannerwork
+          rm -rf .sonar
 
-      - name: Publish unit test results
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        if: always()
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v4
         with:
-          files: "**/surefire-reports/unit-tests.xml"
-          check_name: "Unit Test Results"
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Verify Sonar Scan
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_BACKEND  }}
+          SONAR_ORGANIZATION: ${{ vars.SONAR_ORGANIZATION }}
+          SONAR_PROJECT_KEY: ${{ vars.SONAR_PROJECT_KEY_BACKEND }}
+        run: mvn --batch-mode sonar:sonar -Dsonar.coverage.jacoco.xmlReportPaths=${{ github.workspace }}/target/site/jacoco-aggregate/jacoco.xml -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY_BACKEND }} -Dsonar.organization=${{ vars.SONAR_ORGANIZATION }}
 ```
