Included @lgblaumeisers proposal
Co-authored-by: Lars Geyer-Blaumeiser <lars.blaumeiser@cofinity-x.com>

--- a/docs/release/trg-1/trg-1-09.md
+++ b/docs/release/trg-1/trg-1-09.md
@@ -27,6 +27,6 @@ The migration guide shall _explain_ relevant changes to operators and users.
 
 ## Best Practices
 
-- A migration guide should be understandable by both operators and users of a component.
+- A migration guide should support IT operations management and guide the efforts for updating dependent tools and processes.
 - There should be a dedicated migration guide per release: E.g. From 1.1.x -> 1.2.x, 1.2.x -> 2.0.x etc.
 - A migration guide should only explain those changes that require an action by operators or users of a component. It should not be a duplication of the changelog.
