--- a/docs/release/trg-1/trg-1-09.md
+++ b/docs/release/trg-1/trg-1-09.md
@@ -30,3 +30,7 @@ The migration guide shall _explain_ relevant changes to operators and users and 
 - A migration guide should support IT operations management and guide the efforts for updating dependent tools and processes.
 - There should be a dedicated migration guide per release that contains relevant changes for IT operations managers or end users : E.g. From 1.1.x -> 1.2.x, 1.2.x -> 2.0.x etc.
 - A migration guide should only explain those changes that require an action by IT operations managers or end-users of a component. It should not be a duplication of the changelog.
+
+## Examples
+- [Tractus-X EDC migration guide](https://github.com/eclipse-tractusx/tractusx-edc/tree/main/docs/migration)
+- [Portal migration guide](https://github.com/eclipse-tractusx/portal-assets/blob/v2.3.0/docs/admin/Version%20Upgrade/portal-upgrade-details.md)
