--- a/docs/release/trg-1/trg-1-09.md
+++ b/docs/release/trg-1/trg-1-09.md
@@ -32,5 +32,6 @@ The migration guide shall _explain_ relevant changes to operators and users and 
 - A migration guide should only explain those changes that require an action by IT operations managers or end-users of a component. It should not be a duplication of the changelog.
 
 ## Examples
-- [Tractus-X EDC migration guide](https://github.com/eclipse-tractusx/tractusx-edc/tree/main/docs/migration)
+
+- [EDC migration guide](https://github.com/eclipse-tractusx/tractusx-edc/tree/main/docs/migration)
 - [Portal migration guide](https://github.com/eclipse-tractusx/portal-assets/blob/v2.3.0/docs/admin/Version%20Upgrade/portal-upgrade-details.md)
