--- a/docs-kits/kits/Industry Core Kit/Software Development View/page_digital-twins.mdx
+++ b/docs-kits/kits/Industry Core Kit/Software Development View/page_digital-twins.mdx
@@ -319,7 +319,7 @@ The tested workflow includes the following steps:
 **Result**
 Test was performed using 20 threads in parallel. The average number of transactions per second was 30-35.
 
-> :raised_hand: If the performance is still not satisfactory for the user, then next given approach can be used, where aasx server can be used to transfer big files like parquet files.
+> :raised_hand: If the performance is still not satisfactory for the user, then next given approach can be used, where aasx file format can be used to transfer big files like parquet files.
 
 #### Data Consumption with AAS Submodel Descriptor to represent mass data (like parquet files) reference
 
