Fix further broken links

--- a/docs/release/trg-7/trg-7-08.md
+++ b/docs/release/trg-7/trg-7-08.md
@@ -21,7 +21,7 @@ All products delivered by the project - including websites, documentation, and h
 
 The CC-BY-4.0 is the default license for non-code. For some documentation it may makes sense to put it under the Apache-2.0 license, especially for technical documentation with code snippets embedded. For the KIT documentation it is recommended to put it under the CC-BY-4.0.  The following KIT documentation **MUST** be licensed under the CC-BY-4.0:
 
-- page_adoption_view.md(x)
+- adoption-view.md(x)
 
 Self-created content embedded in the listed KIT documentation files under the CC-BY-4.0, have also to be licensed under the CC-BY-4.0.  Generally self-created artifacts like images, graphics and logos should go under the CC-BY-4.0.
 
